Corrección del error por el que no se eliminaban las cartas al jugarlas